--- a/index.html
+++ b/index.html
@@ -3,95 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>音コミュ！ Ultimate</title>
+    <title>音コミュ！</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { -webkit-tap-highlight-color: transparent; font-family: sans-serif; }
         .scrollbar-hide::-webkit-scrollbar { display: none; }
         input, textarea { font-size: 16px !important; }
-        .post-img { max-height: 250px; object-fit: cover; border-radius: 1rem; width: 100%; margin-top: 0.5rem; }
     </style>
 </head>
-<body class="bg-gray-50 min-h-screen text-gray-800 pb-safe">
+<body class="bg-gray-50 min-h-screen">
 
-    <div id="setup-view" class="hidden fixed inset-0 bg-indigo-700 z-[100] flex flex-col items-center justify-center p-8 text-white text-center">
-        <h1 class="text-4xl font-black mb-4 italic">音コミュ！</h1>
-        <p class="mb-8 opacity-80 text-sm">あなたの音楽コミュニティをはじめよう</p>
-        <input id="user-name-input" type="text" placeholder="ニックネーム" class="w-full max-w-xs p-4 rounded-2xl text-gray-900 text-center text-xl font-bold mb-6 outline-none shadow-2xl">
-        <button id="btn-register" class="w-full max-w-xs bg-white text-indigo-700 py-4 rounded-2xl font-black text-xl shadow-lg active:scale-95 transition-transform">はじめる</button>
-    </div>
-
-    <div id="home-view" class="p-6">
-        <div class="flex justify-between items-center mb-10">
-            <div>
-                <h1 class="text-3xl font-black text-indigo-700 italic">音コミュ！</h1>
-                <p id="display-user-name" class="font-bold text-gray-500 mt-1 text-sm">Loading...</p>
+    <div id="authScreen" class="fixed inset-0 bg-white z-[100] flex flex-col items-center justify-center p-6">
+        <h1 class="text-4xl font-black text-blue-600 mb-2">音コミュ！</h1>
+        <p class="text-gray-400 mb-10 text-sm font-bold">IDとパスワードでログイン</p>
+        <div class="w-full max-w-sm space-y-3">
+            <input type="text" id="authId" placeholder="ユーザーID" class="w-full border-2 border-gray-100 p-4 rounded-2xl focus:border-blue-500 outline-none">
+            <input type="password" id="authPassword" placeholder="パスワード(8文字以上)" class="w-full border-2 border-gray-100 p-4 rounded-2xl focus:border-blue-500 outline-none">
+            <div class="pt-4 space-y-3">
+                <button id="signUpBtn" class="w-full bg-blue-600 text-white p-4 rounded-2xl font-bold shadow-lg">新規登録</button>
+                <button id="loginBtn" class="w-full bg-gray-100 text-gray-600 p-4 rounded-2xl font-bold">ログイン</button>
             </div>
-            <div id="header-icon-area"></div>
-        </div>
-
-        <div class="grid grid-cols-1 gap-4">
-            <button onclick="window.changeMode('lounge')" class="bg-white p-6 rounded-3xl shadow-sm border border-indigo-50 flex items-center gap-4 active:scale-95 transition-all">
-                <span class="text-3xl">☕️</span>
-                <div class="text-left"><div class="text-xl font-black text-gray-800">ラウンジ</div><div class="text-xs text-gray-400">リアルタイム雑談</div></div>
-            </button>
-            <button onclick="window.changeMode('talk')" class="bg-white p-6 rounded-3xl shadow-sm border border-indigo-50 flex items-center gap-4 active:scale-95 transition-all">
-                <span class="text-3xl">🗣️</span>
-                <div class="text-left"><div class="text-xl font-black text-gray-800">相談所</div><div class="text-xs text-gray-400">お悩み・質問板</div></div>
-            </button>
-            <button onclick="window.changeMode('band')" class="bg-white p-6 rounded-3xl shadow-sm border border-indigo-50 flex items-center gap-4 active:scale-95 transition-all">
-                <span class="text-3xl">🎸</span>
-                <div class="text-left"><div class="text-xl font-black text-gray-800">バンド結成</div><div class="text-xs text-gray-400">メンバー・パート募集</div></div>
-            </button>
         </div>
     </div>
 
-    <div id="app-view" class="hidden min-h-screen flex flex-col bg-gray-50">
-        <header class="bg-white/95 backdrop-blur-md sticky top-0 z-50 px-4 py-3 border-b flex justify-between items-center shadow-sm h-16">
-            <button onclick="window.goHome()" class="text-indigo-600 font-bold text-2xl w-10 h-10 flex items-center justify-center active:bg-gray-100 rounded-full">🏠</button>
-            <h2 id="page-title" class="font-black text-indigo-700 text-lg truncate px-2"></h2>
-            <div class="w-10"></div>
+    <div id="appScreen" class="hidden">
+        <header class="bg-white border-b sticky top-0 z-50 p-3 flex justify-between items-center shadow-sm">
+            <div class="flex items-center space-x-2">
+                <div id="toProfile" class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center text-white text-xs font-bold cursor-pointer">👤</div>
+                <h1 id="currentCategoryTitle" class="font-bold text-lg">ラウンジ</h1>
+            </div>
+            <button id="searchBtn" class="text-blue-600 text-xs font-bold">タグ検索</button>
         </header>
 
-        <main class="flex-1 p-4 pb-40 w-full overflow-x-hidden">
-            <div id="lounge-view" class="hidden space-y-4"></div>
-            <div id="thread-list-view" class="hidden space-y-3"></div>
-            <div id="chat-view" class="hidden w-full space-y-4"><div id="message-list" class="space-y-4"></div></div>
-            <div id="mypage-view" class="hidden">
-                <div id="mypage-header" class="bg-white rounded-3xl p-6 shadow-sm border border-indigo-50 mb-6"></div>
-                <div id="mypage-content" class="space-y-3"></div>
-            </div>
-            <div id="user-list-view" class="hidden space-y-3"></div>
-        </main>
-
-        <div id="bottom-input-area" class="hidden fixed bottom-0 left-0 w-full bg-white/90 backdrop-blur-md p-3 border-t z-40 pb-10">
-            <div class="max-w-2xl mx-auto flex flex-col gap-2">
-                <div id="img-preview-area" class="hidden relative w-20 h-20">
-                    <img id="img-preview" class="w-20 h-20 object-cover rounded-xl border shadow-sm">
-                    <button onclick="window.clearImage()" class="absolute -top-2 -right-2 bg-red-500 text-white rounded-full w-5 h-5 text-[10px]">✕</button>
-                </div>
-                <div class="flex gap-2 items-center">
-                    <label class="cursor-pointer bg-gray-100 p-3 rounded-full active:scale-90 transition-transform">
-                        <span>📷</span>
-                        <input type="file" id="img-input" accept="image/*" class="hidden" onchange="window.previewImage(this)">
-                    </label>
-                    <input id="main-input" type="text" placeholder="メッセージを入力..." class="flex-1 bg-gray-50 border-0 rounded-full px-5 py-3 text-sm focus:ring-2 focus:ring-indigo-500 outline-none">
-                    <button id="btn-send" class="bg-indigo-600 text-white w-12 h-12 rounded-full flex items-center justify-center font-bold shadow-lg active:scale-90 transition-transform flex-shrink-0">↑</button>
-                </div>
-            </div>
+        <div class="bg-white border-b flex justify-around p-2 text-xs font-bold text-gray-400">
+            <button id="cat-lounge" class="text-blue-600 border-b-2 border-blue-600 pb-1">ラウンジ</button>
+            <button id="cat-consult">相談室</button>
+            <button id="cat-band">バンド結成</button>
         </div>
 
-        <button id="fab" onclick="window.toggleThreadModal(true)" class="hidden fixed bottom-32 right-6 w-14 h-14 bg-indigo-600 text-white rounded-full shadow-xl flex items-center justify-center text-3xl z-40 active:scale-90 transition-transform">＋</button>
+        <div class="p-3">
+            <button id="vcBtn" class="w-full bg-gradient-to-r from-blue-500 to-indigo-600 text-white p-3 rounded-2xl font-bold shadow-md">🎤 通話を開始する</button>
+        </div>
+
+        <main id="postContainer" class="p-4 space-y-4 pb-48"></main>
+
+        <footer class="fixed bottom-16 left-0 right-0 bg-white/90 backdrop-blur-md border-t p-3 max-w-md mx-auto z-40">
+            <div class="flex items-end space-x-2">
+                <label class="bg-gray-100 p-2 rounded-xl cursor-pointer">
+                    <span>📷</span>
+                    <input type="file" id="fileInput" accept="image/*,video/*" class="hidden">
+                </label>
+                <textarea id="messageInput" placeholder="投稿内容..." class="flex-1 bg-gray-100 rounded-xl p-2 h-10 outline-none"></textarea>
+                <button id="sendBtn" class="bg-blue-600 text-white p-2 px-4 rounded-xl font-bold">送信</button>
+            </div>
+        </footer>
+
+        <nav class="fixed bottom-0 left-0 right-0 bg-white border-t flex justify-around p-3 z-50">
+            <button id="nav-home">🏠</button>
+            <button id="nav-dm">✉️</button>
+            <button id="nav-profile">👤</button>
+        </nav>
     </div>
 
-    <div id="thread-modal" class="hidden fixed inset-0 bg-black/60 z-[100] flex items-center justify-center p-6 backdrop-blur-sm">
-        <div class="bg-white w-full max-w-sm rounded-3xl p-8 space-y-4 shadow-2xl text-center">
-            <h3 class="text-xl font-black text-gray-800">新しい話題を作る</h3>
-            <input id="thread-input" type="text" class="w-full bg-gray-50 border-0 rounded-2xl px-4 py-4 outline-none focus:ring-2 focus:ring-indigo-500" placeholder="タイトルを入力してください">
-            <div class="flex gap-3 pt-4">
-                <button onclick="window.toggleThreadModal(false)" class="flex-1 py-4 bg-gray-100 rounded-2xl font-bold text-gray-500">やめる</button>
-                <button id="btn-create-thread" class="flex-1 py-4 bg-indigo-600 text-white rounded-2xl font-bold shadow-lg">作成！</button>
-            </div>
+    <div id="profilePage" class="hidden fixed inset-0 bg-white z-[60] p-6">
+        <button id="backToHome" class="text-blue-600 font-bold mb-6">← 戻る</button>
+        <div class="text-center">
+            <div class="w-24 h-24 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center text-4xl">👤</div>
+            <h2 id="profileName" class="text-2xl font-bold">---</h2>
+            <p id="profileId" class="text-gray-400 text-sm">@---</p>
+            <button id="logoutBtn" class="mt-10 text-red-500 border border-red-200 px-4 py-2 rounded-xl text-sm">ログアウト</button>
         </div>
     </div>
 
